--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Audiowide&family=Mada:wght@200..900&family=Sirin+Stencil&display=swap"
     rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
